--- a/app/views/muulib/_header.haml
+++ b/app/views/muulib/_header.haml
@@ -1,27 +1,9 @@
 .navbar.navbar-inverse.navbar-fixed-top
   .container
     .navbar-header
-
-/ div class="container">
-/ <div class="navbar-header">
-/ <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-/ <span class="sr-only">Toggle navigation</span>
-/ <span class="icon-bar"></span>
-/ <span class="icon-bar"></span>
-/ <span class="icon-bar"></span>
-/ </button>
-/ <a class="navbar-brand" href="#">Project name</a>
-/ </div>
-/ <div class="navbar-collapse collapse">
-/ <form class="navbar-form navbar-right" role="form">
-/ <div class="form-group">
-/ <input type="text" placeholder="Email" class="form-control">
-/ </div>
-/ <div class="form-group">
-/ <input type="password" placeholder="Password" class="form-control">
-/ </div>
-/ <button type="submit" class="btn btn-success">Sign in</button>
-/ </form>
-/ </div><!--/.navbar-collapse -->
-/ </div>
-/ </div>
+      .navbar-brand
+        = link_to 'MuuLib', '/'
+      %ul.nav.navbar-nav
+        %li{class: "#{active == 1 ? 'active' : ''}"}= link_to 'siema1', '#'
+        %li{class: "#{active == 2 ? 'active' : ''}"}= link_to 'siema2', '#'
+        %li{class: "#{active == 3 ? 'active' : ''}"}= link_to 'siema3', '#'
