index mockup, my scaffold for each model, form and some views for album

--- a/app/assets/stylesheets/views/_muulib.sass
+++ b/app/assets/stylesheets/views/_muulib.sass
@@ -5,5 +5,18 @@
         a
           color: #999999
           &:hover
-            color: white
+            color: rgba(103, 211, 52, 0.6)
             text-decoration: none
+.menu-offset
+  height: 100px
+.btn-default
+  background-color: rgba(103, 211, 52, 0.6)
+  &:hover
+    background-color: rgba(103, 211, 52, 0.9)
+.new-record
+  background-color: rgba(103, 211, 52, 0.6)
+  border-radius: 15px
+  text-align: center
+  margin-bottom: 20px
+  &:hover
+    background-color: rgba(103, 211, 52, 0.9)
