--- a/app/views/muulib/albums/index.haml
+++ b/app/views/muulib/albums/index.haml
@@ -1,1 +1,7 @@
 = render partial: 'shared/header', locals: { active: 2 }
+.menu-offset
+.container
+  .col-lg-10
+    tutaj zawartosc
+  .col-lg-2
+    tutaj menu
