--- a/app/views/muulib/record_labels/edit.haml
+++ b/app/views/muulib/record_labels/edit.haml
@@ -1,5 +1,5 @@
 .menu-offset
-= render partial: 'shared/header', locals: { active: 2 }
+= render partial: 'shared/header', locals: { active: 5 }
 .container
   .row
     .col-lg-6
@@ -7,5 +7,5 @@
     .col-lg-1
     .col-lg-5
       .row.new-record
-        %h3 You're editing a song in MuuLib...
+        %h3 You're editing a label in MuuLib...
         %p ...remember to add all the data. :)
