--- a/app/views/muulib/record_labels/new.haml
+++ b/app/views/muulib/record_labels/new.haml
@@ -1,11 +1,11 @@
 .menu-offset
-= render partial: 'shared/header', locals: { active: 4 }
+= render partial: 'shared/header', locals: { active: 5 }
 .container
   .row
     .col-lg-6
-      = render partial: 'form'
+      = render partial: 'form2'
     .col-lg-1
     .col-lg-5
       .row.new-record
-        %h3 You're adding a new genre to MuuLib...
+        %h3 You're adding a new label to MuuLib...
         %p ...remember to add all the data, but don't worry - you can change it later. :)
