--- a/app/views/shared/_header.haml
+++ b/app/views/shared/_header.haml
@@ -8,4 +8,4 @@
         %li{class: "#{active == 2 ? 'active' : ''}"}= link_to 'Albums', albums_path
         %li{class: "#{active == 3 ? 'active' : ''}"}= link_to 'Songs', songs_path
         %li{class: "#{active == 4 ? 'active' : ''}"}= link_to 'Genres', genres_path
-        %li{class: "#{active == 5 ? 'active' : ''}"}= link_to 'Labels', labels_path
+        %li{class: "#{active == 5 ? 'active' : ''}"}= link_to 'Labels', record_labels_path
