--- a/app/views/muulib/record_labels/_form2.haml
+++ b/app/views/muulib/record_labels/_form2.haml
@@ -1,4 +1,4 @@
-= simple_form_for genre, html: { class: 'form-horizontal' } do |f|
+= simple_form_for record_label, html: { class: 'form-horizontal' } do |f|
   .row
     .col-lg-12
       = f.input :name
