editing index sites

--- a/app/assets/stylesheets/views/_muulib.sass
+++ b/app/assets/stylesheets/views/_muulib.sass
@@ -20,3 +20,9 @@
   margin-bottom: 20px
   &:hover
     background-color: rgba(103, 211, 52, 0.9)
+#footer
+  position: absolute
+  bottom: 0
+  text-align: center
+.list-group-item
+  background-color: rgba(103, 211, 52, 0.6)
