--- a/app/views/muulib/record_labels/index.haml
+++ b/app/views/muulib/record_labels/index.haml
@@ -1,1 +1,8 @@
 = render partial: 'shared/header', locals: { active: 5 }
+.menu-offset
+.container
+  .col-lg-2
+    = render partial: 'shared/side'
+  .col-lg-10
+    tutaj zawartosc
+= render partial: 'shared/footer'
