--- a/app/views/muulib/albums/edit.haml
+++ b/app/views/muulib/albums/edit.haml
@@ -9,3 +9,4 @@
       .row.new-record
         %h3 You're editing an album in MuuLib...
         %p ...remember to add all the data. :)
+.menu-offset
