--- a/app/views/muulib/record_labels/edit.haml
+++ b/app/views/muulib/record_labels/edit.haml
@@ -3,9 +3,10 @@
 .container
   .row
     .col-lg-6
-      = render partial: 'form'
+      = render partial: 'form2'
     .col-lg-1
     .col-lg-5
       .row.new-record
         %h3 You're editing a label in MuuLib...
         %p ...remember to add all the data. :)
+.menu-offset
