--- a/app/views/muulib/record_labels/new.haml
+++ b/app/views/muulib/record_labels/new.haml
@@ -9,3 +9,4 @@
       .row.new-record
         %h3 You're adding a new label to MuuLib...
         %p ...remember to add all the data, but don't worry - you can change it later. :)
+.menu-offset
