--- a/app/views/muulib/albums/_form.haml
+++ b/app/views/muulib/albums/_form.haml
@@ -19,10 +19,10 @@
       = f.association :genres, collection: Genre.all
   .row
     .col-lg-12
-      = f.input :artist, collection: Artist.all, prompt: "Choose an Artist"
+      = f.association :artist
   .row
     .col-lg-12
-      = f.input :label, collection: RecordLabel.all, prompt: "Choose a Label"
+      = f.association :record_label
   .row
     .col-lg-12
       = f.association :songs, collection: Song.all
