--- a/app/views/muulib/albums/new.haml
+++ b/app/views/muulib/albums/new.haml
@@ -11,3 +11,4 @@
         %p ...remember to add all the data, but don't worry - you can change it later. :)
       .row.new-record
         ashdiuahsiudhasiuhdiashiu
+.menu-offset
