--- a/app/views/muulib/artists/new.haml
+++ b/app/views/muulib/artists/new.haml
@@ -9,5 +9,4 @@
       .row.new-record
         %h3 You're adding a new artist to MuuLib...
         %p ...remember to add all the data, but don't worry - you can change it later. :)
-      .row.new-record
-        ashdiuahsiudhasiuhdiashiu
+.menu-offset
