--- a/app/views/muulib/record_labels/index.haml
+++ b/app/views/muulib/record_labels/index.haml
@@ -4,5 +4,5 @@
   .col-lg-2
     = render partial: 'shared/side'
   .col-lg-10
-    tutaj zawartosc
-= render partial: 'shared/footer'
+    = render partial: 'table'
+.menu-offset
