--- a/app/assets/stylesheets/views/_muulib.sass
+++ b/app/assets/stylesheets/views/_muulib.sass
@@ -26,6 +26,6 @@
   text-align: center
 .list-group-item
   background-color: rgba(103, 211, 52, 0.6)
-.context-btn
-  float: right
-  margin-left: 5px
+.panel-body
+  text-align: center
+  vertical-align: center
