--- a/app/views/muulib/albums/_album_info.haml
+++ b/app/views/muulib/albums/_album_info.haml
@@ -1,9 +1,10 @@
-= album.title
-= album.date
-= album.format
-= album.description
-= album.rating
-= album.record_label.name
-- album.songs.each do |s|
-  = s.number
-  = s.title
+.container
+  = album.title
+  = album.date
+  = album.format
+  = album.description
+  = album.rating
+  = album.record_label.name
+  - album.songs.each do |s|
+    = s.number
+    = s.title
