--- a/app/assets/stylesheets/views/_muulib.sass
+++ b/app/assets/stylesheets/views/_muulib.sass
@@ -29,7 +29,7 @@
 .panel-body
   text-align: center
   vertical-align: center
-.song-left
+.pull-left
   float: left
-.song-right
+.pull-right
   float: right
