--- a/app/views/muulib/albums/_album_info.haml
+++ b/app/views/muulib/albums/_album_info.haml
@@ -15,6 +15,10 @@
     .row
       Record label:
       .pull-right= album.record_label.name if album.record_label.present?
+    .row
+      Genres:
+      - album.genres.each do |g|
+        .pull-right= g.name
   .col-lg-4
     %table{ class: 'table table-striped table-hover' }
       %tr
