--- a/app/views/muulib/artists/_table.haml
+++ b/app/views/muulib/artists/_table.haml
@@ -1,12 +1,18 @@
-.admin.container
+.container
   .row
     .col-lg-10
-      .panel.panel-default
-        .panel-heading= "#{params[:controller].capitalize} index"
-        .panel-body
+      .panel-body
+        %table{ class: 'table table-striped table-hover' }
+          %tr
+            %td Name
+            %td Est.
+            %td Country
+            %td Edit
+            %td Destroy
           - artists.each do |f|
-            .panel-body
-              = f.name
-              =link_to 'Edit', edit_artist_path(f), class: 'btn btn-default context-btn'
-              =link_to 'Destroy', artist_path(f), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-default context-btn'
-              %hr.featurette-divider
+            %tr
+              %td= link_to f.name, artist_path(f)
+              %td= f.established
+              %td= f.country
+              %td=link_to 'Edit', edit_artist_path(f), class: 'btn btn-default context-btn'
+              %td=link_to 'Destroy', artist_path(f), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-default context-btn'
