--- a/app/views/muulib/songs/_table.haml
+++ b/app/views/muulib/songs/_table.haml
@@ -1,12 +1,20 @@
-.admin.container
+.container
   .row
     .col-lg-10
-      .panel.panel-default
-        .panel-heading= "#{params[:controller].capitalize} index"
-        .panel-body
+      .panel-body
+        %table{ class: 'table table-striped table-hover' }
+          %tr
+            %td Title
+            %td Number
+            %td Length
+            %td Rating
+            %td Edit
+            %td Destroy
           - songs.each do |f|
-            .panel-body
-              = f.title
-              =link_to 'Edit', edit_song_path(f), class: 'btn btn-default context-btn'
-              =link_to 'Destroy', song_path(f), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-default context-btn'
-              %hr.featurette-divider
+            %tr
+              %td= link_to f.title, songs_path(f)
+              %td= f.number
+              %td= "#{f.min}:#{f.sec}" if f.min.present? && f.sec.present?
+              %td= f.rating
+              %td=link_to 'Edit', edit_song_path(f), class: 'btn btn-default context-btn'
+              %td=link_to 'Destroy', song_path(f), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-default context-btn'
