--- a/app/views/muulib/record_labels/_form2.haml
+++ b/app/views/muulib/record_labels/_form2.haml
@@ -4,6 +4,9 @@
       = f.input :name
   .row
     .col-lg-12
+      = f.input :established
+  .row
+    .col-lg-12
       = f.association :albums, collection: Album.all
   .row
     .col-lg-12
