--- a/app/views/muulib/songs/_form.haml
+++ b/app/views/muulib/songs/_form.haml
@@ -10,6 +10,12 @@
       = f.input :rating
   .row
     .col-lg-12
+      = f.input :min
+  .row
+    .col-lg-12
+      = f.input :sec
+  .row
+    .col-lg-12
       = f.association :artist
   .row
     .col-lg-12
