--- a/app/views/muulib/albums/_form.haml
+++ b/app/views/muulib/albums/_form.haml
@@ -4,7 +4,7 @@
       = f.input :title
   .row
     .col-lg-12
-      = f.input :date
+      = f.input :date, as: :date, start_year: Date.today.year - 500, end_year: Date.today.year, order: [ :day, :month, :year]
   .row
     .col-lg-12
       = f.input :format
@@ -25,7 +25,7 @@
       = f.association :record_label
   .row
     .col-lg-12
-      = f.association :songs, collection: Song.all
+      = f.association :songs, collection: songs_to_show
   .row
     .col-lg-12
       = f.submit 'Save', class: 'btn btn-default'
