--- a/app/views/muulib/artists/_artist_info.haml
+++ b/app/views/muulib/artists/_artist_info.haml
@@ -13,6 +13,10 @@
       Albums:
       - artist.albums.each do |al|
         .pull-right= al.title
+  .col-lg-2
+    =link_to 'Edit', edit_artist_path(artist), class: 'btn btn-default context-btn'
+    =link_to 'Destroy', artist_path(artist), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-default context-btn'
+
 .container.artist-desc
   .col-lg-8.well.well-lg
     = artist.description
