--- a/app/views/muulib/songs/_song_info.haml
+++ b/app/views/muulib/songs/_song_info.haml
@@ -1,41 +1,20 @@
-.container.album-show
-  .col-lg-4.well.well-lg
+.container.song-show
+  .col-lg-6.well.well-lg
     .row
       Title:
-      .pull-right= album.title
+      .pull-right= song.title
     .row
-      Release date:
-      .pull-right= album.date
+      Number:
+      .pull-right= song.number
     .row
-      Format:
-      .pull-right= album.format
+      Length:
+      .pull-right= song.length
     .row
       Rating:
-      .pull-right= "#{album.rating} / 10"
+      .pull-right= "#{song.rating} / 10"
     .row
-      Record label:
-      .pull-right= album.record_label.name if album.record_label.present?
-  .col-lg-4
-    %table{ class: 'table table-striped table-hover' }
-      %tr
-        %td No.
-        %td Title
-      - album.songs.order('number').each_with_index do |s, index|
-        - if index % 2 == 0
-          %tr
-            %td= s.number
-            %td= s.title
-  .col-lg-4
-    %table{ class: 'table table-striped table-hover' }
-      %tr
-        %td No.
-        %td Title
-      - album.songs.order('number').each_with_index do |s, index|
-        - if index % 2 == 1
-          %tr
-            %td= s.number
-            %td= s.title
-.container.album-desc
-  .col-lg-4.well.well-lg
-    = album.description
-
+      aritst:
+      .pull-right= song.artist.name
+    .row
+      Album:
+      .pull-right= song.album.title
