--- a/app/views/muulib/songs/_table.haml
+++ b/app/views/muulib/songs/_table.haml
@@ -12,7 +12,7 @@
             %td Destroy
           - songs.each do |f|
             %tr
-              %td= link_to f.title, songs_path(f)
+              %td= link_to f.title, song_path(f)
               %td= f.number
               %td= "#{f.min}:#{f.sec}" if f.min.present? && f.sec.present?
               %td= f.rating
