--- a/app/views/muulib/albums/_table.haml
+++ b/app/views/muulib/albums/_table.haml
@@ -19,6 +19,6 @@
               %td= f.rating
               %td
                 - f.genres.each do |g|
-                  = "\##{g.name}"
+                  = g.name
               %td=link_to 'Edit', edit_album_path(f), class: 'btn btn-default context-btn'
               %td=link_to 'Destroy', album_path(f), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-default context-btn'
