--- a/app/views/muulib/genres/_genre_info.haml
+++ b/app/views/muulib/genres/_genre_info.haml
@@ -1,41 +1,5 @@
-.container.album-show
+.container.genre-show
   .col-lg-4.well.well-lg
     .row
-      Title:
-      .pull-right= album.title
-    .row
-      Release date:
-      .pull-right= album.date
-    .row
-      Format:
-      .pull-right= album.format
-    .row
-      Rating:
-      .pull-right= "#{album.rating} / 10"
-    .row
-      Record label:
-      .pull-right= album.record_label.name if album.record_label.present?
-  .col-lg-4
-    %table{ class: 'table table-striped table-hover' }
-      %tr
-        %td No.
-        %td Title
-      - album.songs.order('number').each_with_index do |s, index|
-        - if index % 2 == 0
-          %tr
-            %td= s.number
-            %td= s.title
-  .col-lg-4
-    %table{ class: 'table table-striped table-hover' }
-      %tr
-        %td No.
-        %td Title
-      - album.songs.order('number').each_with_index do |s, index|
-        - if index % 2 == 1
-          %tr
-            %td= s.number
-            %td= s.title
-.container.album-desc
-  .col-lg-4.well.well-lg
-    = album.description
-
+      Name:
+      .pull-right= genre.name
