--- a/app/views/muulib/record_labels/_table.haml
+++ b/app/views/muulib/record_labels/_table.haml
@@ -13,4 +13,4 @@
               %td= link_to f.name, record_label_path(f)
               %td= f.established
               %td=link_to 'Edit', edit_record_label_path(f), class: 'btn btn-default context-btn'
-              %td=link_to 'Destroy', record_labels_path(f), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-default context-btn'
+              %td=link_to 'Destroy', record_label_path(f), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-default context-btn'
