--- a/app/views/muulib/artists/_form.haml
+++ b/app/views/muulib/artists/_form.haml
@@ -4,13 +4,13 @@
       = f.input :name
   .row
     .col-lg-12
-      = f.input :established
+      = f.input :established, as: :date, start_year: Date.today.year - 500, end_year: Date.today.year, order: [:day, :month, :year]
   .row
     .col-lg-12
       = f.input :country
   .row
     .col-lg-12
-      = f.input :description
+      = f.input :description, as: :text
   .row
     .col-lg-12
       = f.association :albums, collection: Album.where(artist_id: nil || artist.id)
