adding procedures to database (won't run w/o my db)

--- a/app/views/muulib/artists/_table.haml
+++ b/app/views/muulib/artists/_table.haml
@@ -16,3 +16,9 @@
               %td= f.country
               %td=link_to 'Edit', edit_artist_path(f), class: 'btn btn-default context-btn'
               %td=link_to 'Destroy', artist_path(f), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-default context-btn'
+  .row
+    .col-lg-6
+      .row
+        %h4.well
+          Number of artists:
+          = artists.first.connection.select_one('select f_c_a()')['f_c_a()']
